Transitioning to dune; swapped "revese" for "inverse" throughout. Refactored a bit to create one project top level module. Using a functor now for bimap, not just multi map version of bimap.  Changes to be committed: 	modified:   Makefile 	modified:   README 	new file:   bimap.install 	new file:   bimap.opam 	new file:   dune-project 	new file:   src/lib/.merlin 	modified:   src/lib/bimap.ml 	deleted:    src/lib/bimap.ml.dependstig 	deleted:    src/lib/bimap.mli.bak 	deleted:    src/lib/bimap_module.ml 	deleted:    src/lib/bimap_module.mli 	modified:   src/lib/bimap_multi.ml 	modified:   src/lib/bimap_multi.mli 	deleted:    src/lib/bimap_multi_inherit.ml 	deleted:    src/lib/bimap_multi_new_interface_so_far 	deleted:    src/lib/bimap_multi_wrong.mli 	copied:     src/lib/bimap.ml -> src/lib/bimap_single.ml 	renamed:    src/lib/bimap.mli -> src/lib/bimap_single.mli 	new file:   src/lib/bimap_single.mli_fix 	deleted:    src/lib/bimap_type.ml 	new file:   src/lib/dune 	modified:   src/test/bimap_tests.ml 	new file:   src/test/dune

--- a/README
+++ b/README
@@ -17,9 +17,10 @@ example would be:
 (Core.String.t, Core.Int.t, Core.String.Comparator.t) Core.Map.t
 (Core.Int, Core.String.t, Core.Int.t.Comparator.t) Core.Map.t
 
-However for a multi-map, the types would be:
+For a multi-map, the types would be:
 ('a, 'b list, 'c) Core.Map.t 
-('b, 'a, 'd) Core.Map.t
+('b, 'a list, 'd) Core.Map.t
 
-a Bi-Multi-map is implemented in it's own class with it's own
-type parameters. 
+A Bi-Multi-map is implemented in it's own class with it's own
+type parameters. See the unit test under src/test for examples of
+usage.
