Refactored file names...  Changes to be committed: 	modified:   README 	deleted:    src/lib/.merlin 	modified:   src/lib/bimap.ml 	renamed:    src/lib/bimap_multi.ml -> src/lib/bimap_multi_class.ml 	renamed:    src/lib/bimap_multi.mli -> src/lib/bimap_multi_class.mli 	renamed:    src/lib/bimap_single.ml -> src/lib/bimap_single_class.ml 	renamed:    src/lib/bimap_single.mli -> src/lib/bimap_single_class.mli

--- a/README
+++ b/README
@@ -12,5 +12,5 @@ maps when interacting with either one of them.
 See the unit test under src/test for examples of usage.
 
                             Single values Map     v   Multi-map 
-Implemented as a module | Bimap_single_module.ml  | Bimap_multi_module
- Implemented as a class |    Bimap_single.ml      |   Bimap_multi.ml
+Implemented as a module | Bimap_single_module.ml  | Bimap_multi_module.ml
+ Implemented as a class | Bimap_single_class.ml   | Bimap_multi_class.ml
